<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.zsklad.ui.auth.LoginFragment"
        android:label="LoginFragment">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.zsklad.ui.auth.RegisterFragment"
        android:label="RegisterFragment">
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.zsklad.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.zsklad.ui.products.ProductsFragment"
        android:label="@string/nav_products" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.zsklad.ui.profile.ProfileFragment"
        android:label="@string/nav_profile">
        <action
            android:id="@+id/action_navigation_profile_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
</navigation> 